--- a/CatDogLoverManagement/Pages/Shared/_Layout.cshtml
+++ b/CatDogLoverManagement/Pages/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CatDogLoverManagement</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CatDogLoverManagement.styles.css" asp-append-version="true" />
 
@@ -99,6 +101,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <partial name="_Noti"/>
             @RenderBody()
         </main>
     </div>
